       Canon   BJC S900   (EXPERIMENTAL)
       Canon   BJC S9000  (EXPERIMENTAL)
       Canon PIXMA mini220(EXPERIMENTAL)
       Canon PIXMA mini320(EXPERIMENTAL)
       Canon PIXMA mini360(EXPERIMENTAL)
       Canon PIXMA DS700  (EXPERIMENTAL)
       Canon PIXMA DS810  (EXPERIMENTAL)
       Canon PIXMA 50i    (EXPERIMENTAL)
       Canon PIXMA 80i    (EXPERIMENTAL)
       Canon PIXMA i70    (EXPERIMENTAL)
       Canon PIXMA i450   (EXPERIMENTAL)
       Canon PIXMA i455   (EXPERIMENTAL)
       Canon PIXMA i470D  (EXPERIMENTAL)
       Canon PIXMA i550   (EXPERIMENTAL)
       Canon PIXMA i900D  (EXPERIMENTAL)
       Canon PIXMA i950   (EXPERIMENTAL)
       Canon PIXMA i960   (EXPERIMENTAL)
       Canon PIXMA i6100  (EXPERIMENTAL)
       Canon PIXMA i6500  (EXPERIMENTAL)
       Canon PIXMA i9100  (EXPERIMENTAL)
       Canon PIXMA i9900  (EXPERIMENTAL)
       Canon PIXMA iP90   (EXPERIMENTAL)
       Canon PIXMA iP90v  (EXPERIMENTAL)
       Canon PIXMA iP100  (EXPERIMENTAL)
       Canon PIXMA iP3600 (EXPERIMENTAL)
       Canon PIXMA iP3500 (EXPERIMENTAL)
       Canon PIXMA iP3300 (EXPERIMENTAL)
       Canon PIXMA iP4900 (EXPERIMENTAL)
       Canon PIXMA iP6210D(EXPERIMENTAL)
       Canon PIXMA iP6220D(EXPERIMENTAL)
       Canon PIXMA iP6310D(EXPERIMENTAL)
       Canon PIXMA iP7100 (EXPERIMENTAL)
       Canon PIXMA iP7500 (EXPERIMENTAL)
       Canon PIXMA iP8100 (EXPERIMENTAL)
       Canon PIXMA iP8600 (EXPERIMENTAL)
       Canon PIXMA iP9910 (EXPERIMENTAL)
       Canon PIXMA MP140  (EXPERIMENTAL)
       Canon PIXMA MP190  (EXPERIMENTAL)
       Canon PIXMA MP210  (EXPERIMENTAL)
       Canon PIXMA MP240  (EXPERIMENTAL)
       Canon PIXMA MP375R
       Canon PIXMA MP470  (EXPERIMENTAL)
       Canon PIXMA MP490  (EXPERIMENTAL)
       Canon PIXMA MP530  (EXPERIMENTAL)
       Canon PIXMA MP900  (EXPERIMENTAL)
       Canon PIXMA MX320  (EXPERIMENTAL)
       Canon PIXMA MX370  (EXPERIMENTAL)
       Canon PIXMA MX430  (EXPERIMENTAL)
       Canon PIXMA MX510  (EXPERIMENTAL)